<resources>
    <string name="app_name">Task</string>
    <string name="map">Map</string>
    <string name="email">Email addess</string>
    <string name="password">Password</string>
    <string name="signin">Signin</string>
    <string name="or">Or</string>
    <string name="facebook">Continue with Facebook</string>
    <string name="google">Continue with Google</string>
    <string name="location">Location</string>
    <string name="locationmsg">Please turn on location</string>
    <string name="terms">By accepting this you accept our </string>
    <string name="signup">Don\'t have an account?</string>
    <string name="map_api_key">AIzaSyDzhF77KyULASgnwDVQj1KXs1ZjS_8pGu0</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>