<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/_12sdp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.LoginFragment">
    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="@dimen/_60sdp"
        android:layout_height="@dimen/_60sdp"
        android:layout_marginTop="@dimen/_12sdp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/logo"/>
    <EditText
        android:id="@+id/etEmail"
        style="@style/editText"
        app:layout_constraintTop_toBottomOf="@+id/ivLogo"
        android:layout_marginTop="@dimen/_16sdp"
        android:background="@drawable/edittext_shape"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPass"
        android:layout_marginTop="@dimen/_12sdp"
        app:layout_constraintTop_toBottomOf="@+id/etEmail"
        android:layout_below="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:passwordToggleEnabled="true"
        app:hintEnabled="false">

        <EditText
            android:id="@+id/etPass"
            style="@style/editText"
            android:padding="10dp"
            android:gravity="center_vertical"
            android:background="@drawable/edittext_shape"
            android:drawableTint="@color/gray"
            android:hint="@string/password"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btLogin"
        style="@style/editText"
        android:background="@drawable/edittext_shape"
        android:backgroundTint="@color/black"
        android:textColor="@color/white"
        android:text="@string/signin"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@+id/tilPass"
        android:layout_marginTop="@dimen/_12sdp"/>
    <View
        android:layout_width="0dp"
        android:layout_height="@dimen/_1sdp"
        app:layout_constraintTop_toTopOf="@+id/tvOr"
        app:layout_constraintBottom_toBottomOf="@+id/tvOr"
        android:layout_marginEnd="@dimen/_4sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tvOr"
        android:background="@color/gray"/>

    <TextView
        android:id="@+id/tvOr"
        style="@style/text"
        android:layout_marginTop="@dimen/_12sdp"
        android:text="@string/or"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btLogin"/>
    <View
        android:layout_width="0dp"
        android:layout_height="@dimen/_1sdp"
        app:layout_constraintTop_toTopOf="@+id/tvOr"
        android:layout_marginStart="@dimen/_4sdp"
        app:layout_constraintBottom_toBottomOf="@+id/tvOr"
        app:layout_constraintStart_toEndOf="@+id/tvOr"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/gray"/>

    <RelativeLayout
        android:id="@+id/rlFacebook"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_42sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:background="@drawable/edittext_shape"
        android:backgroundTint="@color/blue"
        app:layout_constraintTop_toBottomOf="@+id/tvOr">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true">
            <ImageView
                android:layout_width="@dimen/_16sdp"
                android:layout_height="@dimen/_16sdp"
                android:src="@drawable/facebook"/>
            <TextView
                style="@style/text"
                android:text="@string/facebook"
                android:textColor="@color/white"/>
        </LinearLayout>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/rlGoogle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_42sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:background="@drawable/bg_shape"
        app:layout_constraintTop_toBottomOf="@+id/rlFacebook">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true">
            <ImageView
                android:layout_width="@dimen/_16sdp"
                android:layout_height="@dimen/_16sdp"
                android:src="@drawable/google"/>
            <TextView
                style="@style/text"
                android:text="@string/google"/>
        </LinearLayout>
    </RelativeLayout>
    <TextView
        android:id="@+id/tvTerms"
        style="@style/text"
        android:layout_marginTop="@dimen/_12sdp"
        android:text="@string/terms"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rlGoogle"/>

    <TextView
        android:id="@+id/tvSignup"
        style="@style/text"
        android:layout_marginTop="@dimen/_12sdp"
        android:text="@string/signup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>